--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         ]
     },
     "require": {
-
+        "phpmailer/phpmailer": "^6.6"
     },
     "require-dev": {
         "phpunit/phpunit": "^9"
